Replace deprecated Long constructor