@@ -164,8 +164,7 @@ class WILogonAllTokensPage extends WizardBasePanel implements IWizardPanel {
         rawData = rawData+"&"+ConfigConstants.PR_TOKEN_LOGON_PWDS+"="+pwds;
         rawData = rawData+"&"+ConfigConstants.TASKID+"="+TaskId.TASK_LOGON_ALL_TOKENS;
         rawData = rawData+"&"+ConfigConstants.OPTYPE+"="+OpDef.OP_MODIFY;
-        rawData = rawData+"&"+ConfigConstants.PR_CMS_SEED+"="+
-          (new Long(WizardBasePanel.mSeed).toString());
+        rawData = rawData+"&"+ConfigConstants.PR_CMS_SEED+"="+Long.valueOf(WizardBasePanel.mSeed);
 
         boolean ready = send(rawData, wizardInfo);
 
